# Bataille-Navale

./: .gitignore  CMakeLists.txt  README  SDLButton.c  SDLButton.h  SDLImage.c  SDLImage.h  TODO  bateau.c  bateau.h  champSaisie.c  champSaisie.h  coniocouleur.c  coniocouleur.h  couleurs.c  couleurs.h  doxygen_log.txt  grille.c  grille.h  includeSDL.h  joueur.c  joueur.h  lietrec.c  lietrec.h  listePions.c  listePions.h  main.c  menu.c  menu.h  parametre.c  parametre.h  pileCoup.c  pileCoup.h  pion.c  pion.h  regles.c  regles.h  test.c  test.h  testBateau.h  (+19 more)
include/ctrl/: EcransDivers.h  FichierDebug.h  FichierMeilleursScores.h  FichierSauvRes.h  Jeu.h  Menu.h  UtilsPoliceEcriture.h  UtilsSDL.h
include/model/: Bateau.h  ChampSaisie.h  Couleurs.h  Coups.h  Grille.h  Joueur.h  Parametre.h  Partie.h  Score.h  (+1 more)
ressources/: regles.txt
src/: CMakeLists.txt
src/ctrl/: CMakeLists.txt  CtrlGrille.c  CtrlGrille.h  EcransDivers.c  EcransDivers.h  FichierDebug.c  FichierDebug.h  FichierMeilleursScores.c  FichierMeilleursScores.h  FichierSauvRes.c  FichierSauvRes.h  Jeu.c  Jeu.h  Main.c  Menu.c  Menu.h  UtilsModel.c  UtilsModel.h  UtilsPoliceEcriture.c  UtilsPoliceEcriture.h  UtilsSDL.c  UtilsSDL.h  fichierDebug.c  fichierDebug.h  jeu.c  jeu.h  main.c  menu.c  menu.h  utilsPoliceEcriture.c  utilsPoliceEcriture.h  utilsSDL.c  utilsSDL.h
src/doc/: instComp.c  mainPage.c  presGen.c
src/model/: Bateau.c  Bateau.h  CMakeLists.txt  ChampSaisie.c  ChampSaisie.h  Couleurs.c  Couleurs.h  Coups.c  Coups.h  Grille.c  Grille.h  Joueur.c  Joueur.h  Parametre.c  Parametre.h  Partie.c  Partie.h  PileCoup.c  PileCoup.h  Random.c  Random.h  SDLMsgBox.c  SDLMsgBox.h  Score.c  Score.h  UtilsModel.c  bateau.c  bateau.h  champSaisie.c  champSaisie.h  couleurs.c  couleurs.h  grille.c  grille.h  joueur.c  joueur.h  parametre.c  parametre.h  partie.c  partie.h  (+6 more)
src/test/: CMakeLists.txt  Test.c  Test.h  test.c
src/test/model/: CMakeLists.txt  TestBateau.c  TestParam.c  TestParam.h  testBateau.c  testBateau.h  testParam.c  testParam.h
src/test/view/: CMakeLists.txt  TestVue.c  TestVue.h  testVue.c  testVue.h
src/view/: CMakeLists.txt  IncludeSDL.h  SDLButton.c  SDLButton.h  SDLImage.c  SDLImage.h  SDLRectangle.c  SDLRectangle.h  VueBateau.h  VueChampSaisie.c  VueChampSaisie.h  VueGrille.c  VueGrille.h  VueParam.h  VueRegles.c  VueSDLMsgBox.c  VueSDLMsgBox.h  VueUtilsSDL.c  VueUtilsSDL.h  includeSDL.h  menu.c  menu.h  vueBateau.c  vueBateau.h  vueChampSaisie.c  vueChampSaisie.h  vueGrille.c  vueGrille.h  vueParam.c  vueParam.h  vueRegles.c  vueSDLMsgBox.c  vueSDLMsgBox.h  vueUtilsSDL.c  vueUtilsSDL.h
(+12 files in other folders)
